@@ -15,7 +15,7 @@ package ifneeded math::roman             1.0   [list source [file join $dir roma
 if {![package vsatisfies [package provide Tcl] 8.4]} {return}
 # statistics depends on linearalgebra (for multi-variate linear regression).
 package ifneeded math::statistics        0.9   [list source [file join $dir statistics.tcl]]
-package ifneeded math::optimize          1.0   [list source [file join $dir optimize.tcl]]
+package ifneeded math::optimize          1.0.1 [list source [file join $dir optimize.tcl]]
 package ifneeded math::calculus          0.8   [list source [file join $dir calculus.tcl]]
 package ifneeded math::interpolate       1.1   [list source [file join $dir interpolate.tcl]]
 package ifneeded math::linearalgebra     1.1.4 [list source [file join $dir linalg.tcl]]
