@@ -1,3 +1,8 @@
+2014-09-21  Arjen Markus <arjenmarkus@users.sourceforge.net>
+	* optimize.tcl: Solve a problem with the detection of the exceptions in solving linear programs. Version 1.0.1
+	* optimize.test: Added tests to distnguish infeasible and unbounded linear programs
+	* pkgIndex.tcl: Bumping version of math::optimize package to 1.0.1
+
 2014-08-21  Arjen Markus <arjenmarkus@users.sourceforge.net>
 	* calculus.tcl: Bumping version to 0.8
 	* pkgIndex.tcl: Bumping version of math::calculus package to 0.8
